[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/glowing square.png" type="Texture" id=1]
[ext_resource path="res://Assets/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Triangle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Triangle Mask.png" type="BitMap" id=4]
[ext_resource path="res://Fonts/FFFFORWA.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/JoinServer.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Server_listener.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
resource_name = "New Anim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Searching for servers ", "Searching for servers .", "Searching for servers . .", "Searching for servers . . ." ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ NodePath("..") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Searching for servers ." ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.0
margin_top = -141.0
margin_right = 206.0
margin_bottom = 141.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -12.0
margin_right = 27.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 4.0
margin_top = 175.0
margin_right = 24.0
margin_bottom = 202.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_click_mask = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 74.0
margin_top = 62.0
margin_right = -310.0
margin_bottom = -154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="ColorRect" parent="window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 228.0
margin_bottom = 110.0
color = Color( 0.160784, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalColor" type="ColorRect" parent="window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_right = 62.0
color = Color( 0.160784, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManualColor" type="ColorRect" parent="window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 62.0
margin_top = -18.0
margin_right = 124.0
color = Color( 0.12549, 0.113725, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Local" type="Button" parent="window"]
margin_top = -18.0
margin_right = 62.0
margin_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Local"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Manual_setup" type="Button" parent="window"]
margin_left = 59.0
margin_top = -18.0
margin_right = 128.0
margin_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Manual Setup"
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManualControl" type="Control" parent="."]
visible = false
margin_left = 74.0
margin_top = 62.0
margin_right = 302.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIP" type="Label" parent="ManualControl"]
margin_left = 25.0
margin_top = 19.0
margin_right = 104.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "Enter Server IP"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_ip_text_edit" type="LineEdit" parent="ManualControl"]
margin_left = 22.0
margin_top = 36.0
margin_right = 207.0
margin_bottom = 61.0
custom_colors/cursor_color = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_server" type="Button" parent="ManualControl"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -29.5
margin_top = -33.0
margin_right = 29.5
margin_bottom = -14.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Join Server"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -47.0
margin_right = 109.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Searching_for_servers" type="Label" parent="LocalControl"]
margin_left = 13.0
margin_top = 4.0
margin_right = 219.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "Searching for servers ."
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LocalControl/Searching_for_servers"]
autoplay = "New Anim"
playback_speed = 0.5
"anims/New Anim" = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="LocalControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 19.0
margin_right = -8.0
margin_bottom = -7.0
custom_constants/separation = 110
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="LocalControl"]
visible = false
margin_left = 14.0
margin_top = 24.0
margin_right = 214.0
margin_bottom = 36.0
allow_reselect = true
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server_listener" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="window/Local" to="." method="_on_Local_pressed"]
[connection signal="pressed" from="window/Manual_setup" to="." method="_on_Manual_setup_pressed"]
[connection signal="pressed" from="ManualControl/Join_server" to="." method="_on_Join_server_pressed"]
[connection signal="new_server" from="Server_listener" to="." method="_on_Server_listener_new_server"]
[connection signal="remove_server" from="Server_listener" to="." method="_on_Server_listener_remove_server"]
